--- a/js-pro-server/package.json
+++ b/js-pro-server/package.json
@@ -9,6 +9,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.1",
         "multer": "^1.4.5-lts.1",
+        "object-sizeof": "^2.6.4",
         "sha3": "^2.1.4",
         "url": "^0.11.3"
     },
