--- a/js-pro/package.json
+++ b/js-pro/package.json
@@ -15,6 +15,7 @@
     "codemirror": "^6.0.1",
     "highlight.js": "^11.9.0",
     "jwt-decode": "^4.0.0",
+    "object-sizeof": "^2.6.4",
     "pullstate": "^1.25.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
